--- a/Qt projects/Testing/mainwindow.ui
+++ b/Qt projects/Testing/mainwindow.ui
@@ -40,6 +40,16 @@
      <string>PushButton</string>
     </property>
    </widget>
+   <widget class="QColumnView" name="columnView">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>350</y>
+      <width>256</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
